--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   ],
   "author": "Allen Psychiatry",
   "license": "UNLICENSED",
-  "private": true
-} 
+  "private": true,
+  "devDependencies": {
+    "sharp": "^0.34.5"
+  }
+}
