--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "UNLICENSED",
   "private": true,
   "devDependencies": {
+    "eslint": "^9.39.2",
+    "puppeteer": "^24.34.0",
     "sharp": "^0.34.5"
   }
 }
