--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,11 @@
-# System files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+# Dependencies
+node_modules/
+package-lock.json
 
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
+# Environment variables
+.env
+.env.local
+.env.*.local
 
 # Logs
 *.log
@@ -19,42 +13,30 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
+# OS files
+.DS_Store
+Thumbs.db
 
-# Coverage directory used by tools like istanbul
-coverage/
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
-# nyc test coverage
-.nyc_output
-
-# Dependency directories
-node_modules/
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
-.env
+# Build files
+dist/
+build/
+*.min.js
+*.min.css
 
 # Temporary files
 *.tmp
 *.temp
+.cache/
 
-# Staging directory (can be regenerated)
-staging/
+# Lighthouse reports (large JSON files)
+lighthouse-report*.json
 
-# Test files
-test-modal.html 
+# Staging directory (if not needed in production)
+# staging/
