Add secure .env configuration system with Google services credentials and quick access links

--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,69 @@
-# Allen Psychiatry - Environment Variables
+# Allen Psychiatry - Environment Configuration Template
 # Copy this file to .env and fill in your actual values
-# DO NOT commit .env to git (it's in .gitignore)
+# .env is gitignored and will NOT be committed to the repository
 
-# Google Analytics 4
+# ============================================
+# GOOGLE ANALYTICS 4 (GA4)
+# ============================================
 GA4_MEASUREMENT_ID=G-LKYXFGGJSP
+GA4_PROPERTY_ID=a357957755p492555456
+GA4_ACCOUNT_ID=a357957755
+GA4_ENABLED=true
 
-# Google Search Console Verification
-# Get this from: https://search.google.com/search-console
-GOOGLE_SEARCH_CONSOLE_VERIFICATION=
+# ============================================
+# GOOGLE SEARCH CONSOLE
+# ============================================
+GSC_PROPERTY_URL=https://allenpsychiatry.net
+GSC_VERIFICATION_CODE=
+GSC_VERIFIED=true
+GSC_RESOURCE_ID=sc-domain:allenpsychiatry.net
 
-# Bing Webmaster Tools Verification
-# Get this from: https://www.bing.com/webmasters
-BING_WEBMASTER_VERIFICATION=
+# ============================================
+# GOOGLE BUSINESS PROFILE
+# ============================================
+GBP_PROFILE_ID=
+GBP_BUSINESS_NAME=Allen Psychiatry
+GBP_ENABLED=false
 
-# Google Business Profile
-# Your Google Business Profile ID (if needed)
-GOOGLE_BUSINESS_PROFILE_ID=
-
-# Site Configuration
+# ============================================
+# WEBSITE CONFIGURATION
+# ============================================
 SITE_URL=https://allenpsychiatry.net
+SITE_DOMAIN=allenpsychiatry.net
 SITE_NAME=Allen Psychiatry
 
-# Contact Information
+# ============================================
+# CONTACT INFORMATION
+# ============================================
 CONTACT_PHONE=(385) 504-1334
 CONTACT_EMAIL=info@allenpsychiatry.net
 CONTACT_ADDRESS=3311 North University Ave, Ste 275, Provo, UT 84604
 
-# Patient Portal
+# ============================================
+# PATIENT PORTAL & SCHEDULING
+# ============================================
 PATIENT_PORTAL_URL=https://pp-wfe-100.advancedmd.com/154986/account/logon
 SCHEDULING_URL=https://pp-wfe-100.advancedmd.com/154986/onlinescheduling/v2/patients
+ADVANCEDMD_ACCOUNT_ID=154986
+
+# ============================================
+# CLOUDFLARE CONFIGURATION
+# ============================================
+CLOUDFLARE_ACCOUNT_ID=
+CLOUDFLARE_ZONE_ID=
+CLOUDFLARE_API_TOKEN=
+
+# ============================================
+# GOOGLE SERVICES LINKS (For Quick Access)
+# ============================================
+GA4_DASHBOARD_URL=https://analytics.google.com/analytics/web/?utm_source=OGB&utm_medium=app&authuser=0#/a357957755p492555456/reports/intelligenthome
+GA4_EVENTS_URL=https://analytics.google.com/analytics/web/?utm_source=OGB&utm_medium=app&authuser=0#/a357957755p492555456/admin/events
+GSC_DASHBOARD_URL=https://search.google.com/search-console
+GSC_INSPECT_URL=https://search.google.com/search-console/inspect
+GSC_SITEMAPS_URL=https://search.google.com/search-console/sitemaps
+
+# ============================================
+# DEVELOPMENT / STAGING
+# ============================================
+NODE_ENV=production
+PORT=3001
